# rag-gs

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  pyproject.toml  viewer_scores.html
configs/: default.yaml
configs/pipelines/: fast.yaml  thorough.yaml
configs/questions/: example.yaml
docs/: quickstart.md
docs/adr/: ADR-001-architecture.md
rag_gs/: workspace.py
rag_gs/cli/: __init__.py  embed.py  merge.py  pipeline.py  prune.py  rank.py  retrieve.py  score.py
rag_gs/core/: config.py  io.py  logging.py  manifest.py  pipeline.py  questions.py  utils.py
rag_gs/plugins/embedders/: voyage.py
rag_gs/plugins/judges/: openai.py  prompts.py
rag_gs/plugins/retrievers/: elastic.py
rag_gs/schemas/: s1_rewrite.json  s2_candidates_dense.json  s2_candidates_sparse.json  s3_merged_pool.json  s4_scored.json  s5_pruned.json  s6_ranked.json
rag_gs/stages/s1_embed/: run.py  schema.py
rag_gs/stages/s2_retrieve/: run.py  schema.py
rag_gs/stages/s3_merge/: run.py  schema.py
rag_gs/stages/s4_score/: run.py  schema.py
rag_gs/stages/s5_prune/: run.py
rag_gs/stages/s6_rank/: run.py
scripts/: run_fast.sh  run_thorough.sh
